Updated splitting and dashboard

--- a/notebooks/Meme Generator - Dashboard.ipynb
+++ b/notebooks/Meme Generator - Dashboard.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+       "    return false;\n",
+       "}\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
@@ -14,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +53,13 @@
     "from IPython.display import display\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import Button, HBox, VBox\n",
-    "import pysrt"
+    "import pysrt\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,19 +145,19 @@
     "    print(yt.captions.all())\n",
     "    en_caption = yt.captions.get_by_language_code(lang)\n",
     "    en_caption_convert_to_srt =(en_caption.generate_srt_captions())\n",
-    "    text_file = open(\"caption.srt\", \"w\")\n",
+    "    text_file = open(\"captions.srt\", \"w\")\n",
     "    text_file.write(en_caption_convert_to_srt)\n",
     "    text_file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parseSubtitles():\n",
-    "    sub = pysrt.open(\"caption.srt\")\n",
+    "    sub = pysrt.open(\"captions.srt\")\n",
     "    global dialogs\n",
     "    global start\n",
     "    global end\n",
@@ -149,14 +165,17 @@
     "    start = []\n",
     "    end = []\n",
     "    for obj in sub:\n",
-    "        dialogs.append(obj.text)\n",
-    "        start.append(obj.start.seconds)\n",
-    "        end.append(obj.end.seconds)"
+    "        s = obj.text\n",
+    "        s = re.sub(r'[^\\w\\s]','',s)\n",
+    "        dialogs.append(s)\n",
+    "        start.append((obj.start.minutes * 60) + obj.start.seconds)\n",
+    "        end.append((obj.end.minutes * 60) + obj.end.seconds)\n",
+    "        print(obj)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,8 +386,9 @@
     "button_download = Button(description = 'Download Video')   \n",
     "button_download.on_click(clickedDownload)\n",
     "\n",
+    "caption_code = 'en'\n",
     "def clickedSplit(arg):\n",
-    "    generateCaptions(textYoutubeLink.value,'en')\n",
+    "    generateCaptions(textYoutubeLink.value,caption_code)\n",
     "    parseSubtitles()\n",
     "    splitVideo()\n",
     "    print(\"Video splitting successful!\")\n",
@@ -384,6 +404,12 @@
     "    \n",
     "button_news = Button(description = 'Fetch News')   \n",
     "button_news.on_click(clickedNews)\n",
+    "\n",
+    "def clickedGenerate(arg): \n",
+    "    getMeme(dialogs,news)\n",
+    "    \n",
+    "button_generate = Button(description = 'Generate All Memes')   \n",
+    "button_generate.on_click(clickedGenerate)\n",
     "\n",
     "def clickedFull(arg):\n",
     "    demoInfinityWarTrailer()\n",
@@ -416,17 +442,428 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meme Builder Dashboard\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d7b15b4d0df46f789bba04549b9f7d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Generate All Memes', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc81f8f607d04fc2b6c6dfef81400028",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Text(value='', description='Youtube: ', placeholder='Enter youtube video link'), Button(descrip…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0b53b2e1edab473da67baed639b1f785",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Select(description='Category: ', index=1, options=('business', 'entertainment', 'general', 'health', 'science'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "73593bc71f9c4169bbd79e5dd3b792fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Select(description='Country: ', index=23, options=('ae', 'ar', 'at', 'au', 'be', 'bg', 'br', 'ca', 'ch', 'cn',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2c3a0ef02bb4ccfb2530ee9870746f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(description='Fetch News', style=ButtonStyle()), Button(description='Generate All Memes',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a44cbcba7a104ae1b103e453e4ee0a8d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Textarea(value='But this does put a smile on my face.', description='Enter dialog: ', placehold…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2923db60fde849e991cc6f9c667bd017",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Textarea(value='', description='Enter line: ', placeholder='Custom Meme line'), Button(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anger: 0.13246757\n",
+      "fear: 0.75783014\n",
+      "joy: 0.02189254\n",
+      "sadness: 0.08780966\n",
+      "The Hindu Explains | Why is the RBI worried when volume of bad loans declined in the September quarter? - The Hindu :  You knew him didnt you\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   9%|▊         | 2/23 [00:00<00:01, 14.54it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_ You kneThe Hind.mp4.\n",
+      "MoviePy - Writing audio in Meme_ You kneThe HindTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   8%|▊         | 2/25 [00:00<00:01, 14.43it/s, now=None]    "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_ You kneThe Hind.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                            \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_ You kneThe Hind.mp4\n",
+      "anger: 0.13349234\n",
+      "fear: 0.75177824\n",
+      "joy: 0.021578694\n",
+      "sadness: 0.09315079\n",
+      "India: AstraZeneca COVID-19 vaccine approved for emergency use | COVID-19 News - WION : Then you had that one little feeling\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   2%|▏         | 2/89 [00:00<00:07, 12.08it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_Then youIndia: A.mp4.\n",
+      "MoviePy - Writing audio in Meme_Then youIndia: ATEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   2%|▏         | 2/97 [00:00<00:06, 13.71it/s, now=None]     "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_Then youIndia: A.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                            \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_Then youIndia: A.mp4\n",
+      "anger: 0.13328211\n",
+      "fear: 0.7574643\n",
+      "joy: 0.022103954\n",
+      "sadness: 0.08714958\n",
+      "The Hindu Explains | Why is the RBI worried when volume of bad loans declined in the September quarter? - The Hindu : But you waved it away\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "chunk:   0%|          | 0/67 [00:00<?, ?it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_But you The Hind.mp4.\n",
+      "MoviePy - Writing audio in Meme_But you The HindTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   3%|▎         | 2/73 [00:00<00:05, 13.38it/s, now=None]      "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_But you The Hind.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                            \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_But you The Hind.mp4\n",
+      "anger: 0.13286932\n",
+      "fear: 0.75414085\n",
+      "joy: 0.02157223\n",
+      "sadness: 0.09141782\n",
+      "2021 MG ZS Petrol Spied Testing Ahead Of Launch In India - GaadiWaadi.com : You shouldve listened to that one little feeling\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   0%|          | 0/49 [00:00<?, ?it/s, now=None]              "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_You shou2021 MG .mp4.\n",
+      "MoviePy - Writing audio in Meme_You shou2021 MG TEMP_MPY_wvf_snd.mp3\n",
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_You shou2021 MG .mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                            \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_You shou2021 MG .mp4\n",
+      "anger: 0.1320809\n",
+      "fear: 0.75454754\n",
+      "joy: 0.021690624\n",
+      "sadness: 0.09168104\n",
+      "Imports go up for 1st time since last Feb, exports dip 0.8% - Times of India : Just like Im listening to you now\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   2%|▏         | 2/133 [00:00<00:07, 17.54it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_Just likImports .mp4.\n",
+      "MoviePy - Writing audio in Meme_Just likImports TEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   1%|▏         | 2/145 [00:00<00:07, 18.34it/s, now=None]      "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_Just likImports .mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_Just likImports .mp4\n",
+      "anger: 0.12955044\n",
+      "fear: 0.76048845\n",
+      "joy: 0.02161403\n",
+      "sadness: 0.08834695\n",
+      "Tata Altroz EV To Be Launched This Year – 5 Things To Know - GaadiWaadi.com : You can talk to me\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   3%|▎         | 2/67 [00:00<00:03, 17.84it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_You can Tata Alt.mp4.\n",
+      "MoviePy - Writing audio in Meme_You can Tata AltTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:  10%|▉         | 7/73 [00:00<00:01, 61.06it/s, now=None]     "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_You can Tata Alt.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                            \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_You can Tata Alt.mp4\n",
+      "anger: 0.1325786\n",
+      "fear: 0.7499577\n",
+      "joy: 0.021175258\n",
+      "sadness: 0.09628853\n"
+     ]
+    }
+   ],
    "source": [
     "filename = \"video3.mp4\"\n",
+    "caption_code = 'en-US'\n",
     "print(\"Meme Builder Dashboard\")\n",
     "display(button_demo)\n",
     "display(HBox([textYoutubeLink,button_download,button_split]))\n",
     "display(selCategory)\n",
     "display(selCountry)\n",
-    "display(button_news)\n",
+    "display(HBox([button_news,button_generate]))\n",
     "#display(txtml)\n",
     "display(HBox([txtml,textFilename,button_meme]))\n",
     "display(HBox([txtCustom,button_custom]))"
