--- a/notebooks/Meme Generator - Dashboard.ipynb
+++ b/notebooks/Meme Generator - Dashboard.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
     "def clickedDownload(arg): \n",
     "    downloadVideo(textYoutubeLink.value)\n",
     "    \n",
-    "button_download = Button(description = 'Download Video')   \n",
+    "button_download = Button(description = 'Download Video',button_style='danger')   \n",
     "button_download.on_click(clickedDownload)\n",
     "\n",
     "caption_code = 'en'\n",
@@ -393,7 +393,7 @@
     "    splitVideo()\n",
     "    print(\"Video splitting successful!\")\n",
     "    \n",
-    "button_split = Button(description = 'Split Video')   \n",
+    "button_split = Button(description = 'Split Video',button_style='danger')   \n",
     "button_split.on_click(clickedSplit)\n",
     "\n",
     "selCountry = widgets.Select(options=['ae','ar','at','au','be','bg','br','ca','ch','cn','co','cu','cz','de','eg','fr','gb','gr','hk','hu','id','ie','il','in','it','jp','kr','lt','lv','ma','mx','my','ng','nl','no','nz','ph','pl','pt','ro','rs','ru','sa','se','sg','si','sk','th','tr','tw','ua','us','ve','za'],value = 'in', rows = 1, description = 'Country: ')\n",
@@ -402,24 +402,23 @@
     "def clickedNews(arg): \n",
     "    fetchNews(selCountry.value,selCategory.value)\n",
     "    \n",
-    "button_news = Button(description = 'Fetch News')   \n",
+    "button_news = Button(description = 'Fetch News',button_style='danger')   \n",
     "button_news.on_click(clickedNews)\n",
     "\n",
     "def clickedGenerate(arg): \n",
     "    getMeme(dialogs,news)\n",
     "    \n",
-    "button_generate = Button(description = 'Generate All Memes')   \n",
+    "button_generate = Button(description = 'Generate All Memes',button_style='danger')   \n",
     "button_generate.on_click(clickedGenerate)\n",
     "\n",
     "def clickedFull(arg):\n",
     "    demoInfinityWarTrailer()\n",
     "    \n",
-    "button_demo = Button(description = 'Generate All Memes')   \n",
+    "button_demo = Button(description = 'Demo Run')   \n",
     "button_demo.on_click(clickedFull)\n",
     "\n",
     "textFilename = widgets.Text(\n",
-    "    value=filename,\n",
-    "    placeholder='Enter file name',\n",
+    "    placeholder='Enter clip name',\n",
     "    description='File Name: ',\n",
     "    disabled=False\n",
     ")\n",
@@ -428,39 +427,41 @@
     "def clickedOneMeme(arg): \n",
     "    getDialogMeme(txtml.value,textFilename.value)\n",
     "\n",
-    "txtml = widgets.Textarea(value=dialog_text,placeholder = \"Type the dialog\", description = \"Enter dialog: \")\n",
-    "button_meme = Button(description = 'Generate Meme')   \n",
+    "txtml = widgets.Textarea(placeholder = \"Type the dialog\", description = \"Enter dialog: \")\n",
+    "button_meme = Button(description = 'Generate Meme',button_style='danger')   \n",
     "button_meme.on_click(clickedOneMeme)\n",
     "\n",
     "txtCustom = widgets.Textarea(placeholder = \"Custom Meme line\", description = \"Enter line: \")\n",
     "def clickedCustom(arg): \n",
     "    generateFinalOutput(textFilename.value, txtCustom.value, txtml.value )\n",
     "    \n",
-    "button_custom = Button(description = 'Custom Meme')   \n",
-    "button_custom.on_click(clickedCustom)\n"
+    "button_custom = Button(description = 'Custom Meme',button_style='danger')   \n",
+    "button_custom.on_click(clickedCustom)\n",
+    "\n",
+    "file = open(\"C:\\\\Users\\\\leena\\\\Desktop\\\\Python Projects\\\\emotion-from-tweet\\\\notebooks\\\\unnamed.jpg\", \"rb\")\n",
+    "image = file.read()\n",
+    "header=widgets.Image(\n",
+    "    value=image,\n",
+    "    format='png',\n",
+    "    width=600,\n",
+    "    height=800,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Meme Builder Dashboard\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d7b15b4d0df46f789bba04549b9f7d9",
+       "model_id": "bb62b649d5114ae4a476f652941d3f34",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Button(description='Generate All Memes', style=ButtonStyle())"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00\\x84\\x00\\x08\\x06…"
       ]
      },
      "metadata": {},
@@ -469,12 +470,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc81f8f607d04fc2b6c6dfef81400028",
+       "model_id": "a0b87934fc374057b84f1763ab3cf118",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Text(value='', description='Youtube: ', placeholder='Enter youtube video link'), Button(descrip…"
+       "Button(description='Demo Run', style=ButtonStyle())"
       ]
      },
      "metadata": {},
@@ -483,7 +484,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b53b2e1edab473da67baed639b1f785",
+       "model_id": "58a5a3de30de454896d3120371e076f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Text(value='', description='Youtube: ', placeholder='Enter youtube video link'), Button(button_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a5e9be6908a24496a110c95ebca06105",
        "version_major": 2,
        "version_minor": 0
       },
@@ -497,7 +512,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73593bc71f9c4169bbd79e5dd3b792fa",
+       "model_id": "d15897ed3b26456cbb04f78cd815e289",
        "version_major": 2,
        "version_minor": 0
       },
@@ -511,12 +526,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2c3a0ef02bb4ccfb2530ee9870746f5",
+       "model_id": "d56273267dbf4ead8b57afe77846a012",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Button(description='Fetch News', style=ButtonStyle()), Button(description='Generate All Memes',…"
+       "HBox(children=(Button(button_style='danger', description='Fetch News', style=ButtonStyle()), Button(button_sty…"
       ]
      },
      "metadata": {},
@@ -525,12 +540,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a44cbcba7a104ae1b103e453e4ee0a8d",
+       "model_id": "539d355743234809a0668de260efeda6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Textarea(value='But this does put a smile on my face.', description='Enter dialog: ', placehold…"
+       "HBox(children=(Textarea(value='', description='Enter dialog: ', placeholder='Type the dialog'), VBox(children=…"
       ]
      },
      "metadata": {},
@@ -539,333 +554,29 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2923db60fde849e991cc6f9c667bd017",
+       "model_id": "e3177d21283b44889716e29af3d156c5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Textarea(value='', description='Enter line: ', placeholder='Custom Meme line'), Button(descript…"
+       "HBox(children=(Textarea(value='', description='Enter line: ', placeholder='Custom Meme line'), Button(button_s…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "anger: 0.13246757\n",
-      "fear: 0.75783014\n",
-      "joy: 0.02189254\n",
-      "sadness: 0.08780966\n",
-      "The Hindu Explains | Why is the RBI worried when volume of bad loans declined in the September quarter? - The Hindu :  You knew him didnt you\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "chunk:   9%|▊         | 2/23 [00:00<00:01, 14.54it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Building video Meme_ You kneThe Hind.mp4.\n",
-      "MoviePy - Writing audio in Meme_ You kneThe HindTEMP_MPY_wvf_snd.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "t:   8%|▊         | 2/25 [00:00<00:01, 14.43it/s, now=None]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "Moviepy - Writing video Meme_ You kneThe Hind.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                            \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready Meme_ You kneThe Hind.mp4\n",
-      "anger: 0.13349234\n",
-      "fear: 0.75177824\n",
-      "joy: 0.021578694\n",
-      "sadness: 0.09315079\n",
-      "India: AstraZeneca COVID-19 vaccine approved for emergency use | COVID-19 News - WION : Then you had that one little feeling\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "chunk:   2%|▏         | 2/89 [00:00<00:07, 12.08it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Building video Meme_Then youIndia: A.mp4.\n",
-      "MoviePy - Writing audio in Meme_Then youIndia: ATEMP_MPY_wvf_snd.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "t:   2%|▏         | 2/97 [00:00<00:06, 13.71it/s, now=None]     "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "Moviepy - Writing video Meme_Then youIndia: A.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                            \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready Meme_Then youIndia: A.mp4\n",
-      "anger: 0.13328211\n",
-      "fear: 0.7574643\n",
-      "joy: 0.022103954\n",
-      "sadness: 0.08714958\n",
-      "The Hindu Explains | Why is the RBI worried when volume of bad loans declined in the September quarter? - The Hindu : But you waved it away\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "chunk:   0%|          | 0/67 [00:00<?, ?it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Building video Meme_But you The Hind.mp4.\n",
-      "MoviePy - Writing audio in Meme_But you The HindTEMP_MPY_wvf_snd.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "t:   3%|▎         | 2/73 [00:00<00:05, 13.38it/s, now=None]      "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "Moviepy - Writing video Meme_But you The Hind.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                            \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready Meme_But you The Hind.mp4\n",
-      "anger: 0.13286932\n",
-      "fear: 0.75414085\n",
-      "joy: 0.02157223\n",
-      "sadness: 0.09141782\n",
-      "2021 MG ZS Petrol Spied Testing Ahead Of Launch In India - GaadiWaadi.com : You shouldve listened to that one little feeling\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "t:   0%|          | 0/49 [00:00<?, ?it/s, now=None]              "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Building video Meme_You shou2021 MG .mp4.\n",
-      "MoviePy - Writing audio in Meme_You shou2021 MG TEMP_MPY_wvf_snd.mp3\n",
-      "MoviePy - Done.\n",
-      "Moviepy - Writing video Meme_You shou2021 MG .mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                            \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready Meme_You shou2021 MG .mp4\n",
-      "anger: 0.1320809\n",
-      "fear: 0.75454754\n",
-      "joy: 0.021690624\n",
-      "sadness: 0.09168104\n",
-      "Imports go up for 1st time since last Feb, exports dip 0.8% - Times of India : Just like Im listening to you now\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "chunk:   2%|▏         | 2/133 [00:00<00:07, 17.54it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Building video Meme_Just likImports .mp4.\n",
-      "MoviePy - Writing audio in Meme_Just likImports TEMP_MPY_wvf_snd.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "t:   1%|▏         | 2/145 [00:00<00:07, 18.34it/s, now=None]      "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "Moviepy - Writing video Meme_Just likImports .mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                               \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready Meme_Just likImports .mp4\n",
-      "anger: 0.12955044\n",
-      "fear: 0.76048845\n",
-      "joy: 0.02161403\n",
-      "sadness: 0.08834695\n",
-      "Tata Altroz EV To Be Launched This Year – 5 Things To Know - GaadiWaadi.com : You can talk to me\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "chunk:   3%|▎         | 2/67 [00:00<00:03, 17.84it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Building video Meme_You can Tata Alt.mp4.\n",
-      "MoviePy - Writing audio in Meme_You can Tata AltTEMP_MPY_wvf_snd.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "t:  10%|▉         | 7/73 [00:00<00:01, 61.06it/s, now=None]     "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "Moviepy - Writing video Meme_You can Tata Alt.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                            \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready Meme_You can Tata Alt.mp4\n",
-      "anger: 0.1325786\n",
-      "fear: 0.7499577\n",
-      "joy: 0.021175258\n",
-      "sadness: 0.09628853\n"
-     ]
     }
    ],
    "source": [
     "filename = \"video3.mp4\"\n",
     "caption_code = 'en-US'\n",
-    "print(\"Meme Builder Dashboard\")\n",
+    "display(header)\n",
     "display(button_demo)\n",
     "display(HBox([textYoutubeLink,button_download,button_split]))\n",
     "display(selCategory)\n",
     "display(selCountry)\n",
     "display(HBox([button_news,button_generate]))\n",
     "#display(txtml)\n",
-    "display(HBox([txtml,textFilename,button_meme]))\n",
+    "display(HBox([txtml,VBox([textFilename,button_meme])]))\n",
     "display(HBox([txtCustom,button_custom]))"
    ]
   },
